keyManagement: Adjust CSS to avoid table overflow in MonoBook skin
Bug: T332315

--- a/resources/keyManagement.less
+++ b/resources/keyManagement.less
@@ -17,13 +17,19 @@
 	}
 }
 
+#api-management-panel {
+	>div {
+		display: table;
+		margin-bottom: 10px;
+	}
+}
+
 .apiportal-key-overview-item {
-	display: table;
-	height: 150px;
+	display: inline-table;
 	border: 1px solid #c8ccd1;
-	padding: 30px;
+	padding: 15px;
 	width: 100%;
-	margin-bottom: 10px;
+	margin: 5px auto 5px auto;
 
 	.data-container {
 		vertical-align: middle;
